codex-rs/tui/src/session_viewer/snapshots/codex_tui__session_viewer__voice_transcript__tests__voice_conversation.snap
---
source: tui/src/session_viewer/voice_transcript_tests.rs
assertion_line: 201
expression: "rows.join(\"\\n\")"
---

› Can we save this conversation?


• Yes. The voice recording stays in your JSONL file.


› And follow it live
  [Incomplete recording]
