codex-rs/tui/src/session_viewer/snapshots/codex_tui__session_viewer__voice_transcript__tests__voice_first_message.snap
---
source: tui/src/session_viewer/voice_transcript_tests.rs
assertion_line: 237
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 7 },
    content: [
        "                                        ",
        "› Hello                                 ",
        "  [Streaming…]                          ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | DIM,
        x: 2, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
